[package]
name = "wallpaper"
version = "0.1.0"
authors = ["chenpinzhuo <495928509>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.17"
clap = "2.33.3"
ctrlc = "3.1.6"
reqwest = "0.9.22"
regex = "1"

[profile.release]
opt-level = 'z'

[target.'cfg(unix)'.dependencies]
nix = "0.18"
